Fixed EWF UI spacing bugs with wrapping lists.

--- a/Web Site/Ewf/Styles/EwfUi/Layout.css
+++ b/Web Site/Ewf/Styles/EwfUi/Layout.css
@@ -161,16 +161,22 @@ ewfCheckboxList > ewfCheckboxListContentContainer > ewfUnorderedComponentList > 
 }
 
 /* block element vertical spacing */
-p, ewfSectionNormalStyleBothStates > ewfSectionContentContainer, ewfUnorderedLineList, ewfUnorderedStackList, ewfUnorderedWrappingList, ewfHtmlBlock ul, .ewfControlList, div.ewfStandardDynamicTable, ewfTableStandardAndStandardLayoutOnlyStyles, ewfCheckboxList, div.ewfStandardFileCollectionManager, ewfMergeFieldTreeContainer, ewfMergeRowTreeContainer, ewfMergeRowTreeChildContainer, ewfControlStack, div.ewfControlList, ewfHtmlBlockEditor, ewfSectionBoxStyleBothStates, ewfFormItemList, ewfFormItem, ewfChart, ewfUiEntityBlock > *, ewfUiGlobalFootBlock, ewfHtmlBlock {
+p, ewfSectionNormalStyleBothStates > ewfSectionContentContainer, ewfUnorderedLineList, ewfUnorderedStackList, ewfHtmlBlock ul, .ewfControlList, div.ewfStandardDynamicTable, ewfTableStandardAndStandardLayoutOnlyStyles, ewfCheckboxList, div.ewfStandardFileCollectionManager, ewfMergeFieldTreeContainer, ewfMergeRowTreeContainer, ewfMergeRowTreeChildContainer, ewfControlStack, div.ewfControlList, ewfHtmlBlockEditor, ewfSectionBoxStyleBothStates, ewfFormItemList, ewfFormItem, ewfChart, ewfUiEntityBlock > *, ewfUiGlobalFootBlock, ewfHtmlBlock {
 	margin-top: 1em;
 }
-p:first-child, ewfUnorderedLineList:first-child, ewfUnorderedStackList:first-child, ewfUnorderedWrappingList:first-child, ewfHtmlBlock ul:first-child, .ewfControlList:first-child, div.ewfStandardDynamicTable:first-child, ewfTableStandardAndStandardLayoutOnlyStyles:first-child, ewfCheckboxList:first-child, div.ewfStandardFileCollectionManager:first-child, ewfMergeFieldTreeContainer:first-child, ewfMergeRowTreeContainer:first-child, ewfMergeRowTreeChildContainer:first-child, ewfControlStack:first-child, div.ewfControlList:first-child, ewfHtmlBlockEditor:first-child, ewfSectionBoxStyleBothStates:first-child, ewfFormItemList:first-child, ewfFormItem:first-child, ewfChart:first-child, ewfUiEntityBlock > *:first-child, ewfHtmlBlock:first-child {
+p:first-child, ewfUnorderedLineList:first-child, ewfUnorderedStackList:first-child, ewfHtmlBlock ul:first-child, .ewfControlList:first-child, div.ewfStandardDynamicTable:first-child, ewfTableStandardAndStandardLayoutOnlyStyles:first-child, ewfCheckboxList:first-child, div.ewfStandardFileCollectionManager:first-child, ewfMergeFieldTreeContainer:first-child, ewfMergeRowTreeContainer:first-child, ewfMergeRowTreeChildContainer:first-child, ewfControlStack:first-child, div.ewfControlList:first-child, ewfHtmlBlockEditor:first-child, ewfSectionBoxStyleBothStates:first-child, ewfFormItemList:first-child, ewfFormItem:first-child, ewfChart:first-child, ewfUiEntityBlock > *:first-child, ewfHtmlBlock:first-child {
 	margin-top: 0;
+}
+ewfUnorderedWrappingList {
+	margin-top: calc( 1em - .25em );
+}
+ewfUnorderedWrappingList:first-child {
+	margin-top: calc( 0em - .25em );
 }
 ewfUiPageActionAndContentAndContentFootCell {
 	padding-top: 1em;
 }
-p, ewfUnorderedLineList, ewfUnorderedStackList, ewfUnorderedWrappingList, ewfHtmlBlock ul {
+p, ewfUnorderedLineList, ewfUnorderedStackList, ewfHtmlBlock ul {
 	margin-bottom: 0;
 }
 
